public/styles.css
/* Copyright 2025 Blake Rayvid <https://github.com/brayvid> */

body, html {
    margin: 0;
    padding: 0;
    min-height: 100%;
}
body {
    font-family: Arial, sans-serif;
    background-color: #f0f0f0;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    padding-top: 65px;
}

nav, #instructions, #filter-input, #politicians-table, #add-politician {
    margin-bottom: 20px; /* Add some space between content sections and the footer */
}

.container {
    width: 80%;
    margin: 0 auto;
}

header {
    background-color: #007bff;
    color: white;
    padding: 1rem;
    text-align: center;
    margin-bottom: 1.5rem;
}

h1, h2 {
    margin: 0.5rem 0;
}

section {
    background-color: white;
    padding: 1rem;
    border-radius: 5px;
    margin-bottom: 1.5rem;
}

#politician-list, #vote-list {
    list-style-type: none;
    padding: 0;
}

li {
    padding: 0.5rem;
    border-bottom: 1px solid #ddd;
}

button {
    padding: 0.5rem 1rem;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 3px;
    cursor: pointer;
    margin-top: 10px;
}

button:hover {
    background-color: #0056b3;
}

.vote-buttons-container {
    display: flex;
    justify-content: space-around;
    margin-top: 10px;
}

.vote-buttons-container button {
    margin-top: 5px;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
}

th, td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
}

th {
    cursor: pointer;
    background-color: #f2f2f2;
}

tr:hover {
    background-color: #f1f1f1;
}

.message-container {
    margin-top: 10px;
    font-size: 16px;
    color: #333;
}

#filter-input {
    width: 100%; /* Make the search bar take up 100% of the available width */
    max-width: 2400px; /* Set a maximum width for the search bar */
    /* margin: 0 auto; /* Center the search bar on the page */
    padding: 10px; /* Add some padding for better appearance */
    box-sizing: border-box; /* Ensure padding doesn't affect the total width */
    display: block; /* Make sure it behaves as a block element */
}


  
  @media (max-width: 600px) {
    #bubble-chart-container {
      height: auto;
      max-height: none;
      padding: 0;
      margin: 0;
    }
  
    #bubble-chart {
      width: 100%;
      height: auto;
    }
  }

  
  
  #bubble-chart {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    display: block;
}

#vote-summary {
    margin: 0;
    padding: 0.5rem;
}


/* Navbar styling */
.navbar {
    background-color: #333;
    overflow: hidden;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
}

.navbar a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.navbar a:hover {
    background-color: #ddd;
    color: black;
}

/* Footer styling */
.footer {
    margin-top: auto; /* Push the footer to the bottom of the page */
    padding: 10px 20px;
    background-color: #f1f1f1;
    text-align: center;
    width: 100%;
    box-sizing: border-box;
    position: relative;
    bottom: 0;
    left: 0;
    right: 0;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
}

th, td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
}

th {
    cursor: pointer;
    background-color: #f2f2f2;
}

tr:hover {
    background-color: #f1f1f1;
}

.message-container {
    margin-top: 10px;
    font-size: 16px;
    color: #333;
}

#filter-input {
    margin-bottom: 10px;
    padding: 8px;
    width: 100%;
    font-size: 16px;
}

.vote-buttons-container {
    display: flex;
    justify-content: space-around;
    margin-top: 10px;
}

.vote-buttons-container button {
    margin-top: 5px;
}

.navbar-title {
    text-align: center;
    color: #f2f2f2;
    font-size: 20px;
    font-weight: bold;
    flex-grow: 1;
}

.footer-link{
    color: #000000;
}

/* Spacer to balance the title */
.spacer {
    width: 80px;
}

/* Style for the sort handle/button */
.sort-handle {
    cursor: pointer;
    margin-right: 5px;
    font-size: 14px;
}

.sort-handle:hover {
    color: #007BFF; /* Change color on hover */
}

.sort-arrow {
    cursor: pointer;
    margin-left: 5px;
    font-size: 14px;
}




#bubble-chart-container {
    display: none; /* hidden by default */
    justify-content: center;
    align-items: center;
    width: 100vw;
    max-width: 100%;
    height: 100vw; /* makes it a square */
    max-height: 80vh;
    margin-bottom: 20px;
}

#bubble-chart {
    width: 100%;
    height: 100%;
}
@media (max-width: 768px) {
    #bubble-chart-container {
        height: 90vw;
    }
}

